@@ -90,15 +90,21 @@ gdb_test "$vgdbcmd" " in \\.?_start .*" "target remote for vgdb"
 gdb_test "monitor v.set gdb_output" "valgrind output will go to gdb.*"
 
 set continue_count 1
-while 1 {
+set loop 1
+while {$loop && $continue_count < 100} {
     set test "continue #$continue_count"
     gdb_test_multiple "continue" "" {
 	-re "Invalid free\\(\\).*: main .*\r\n$gdb_prompt $" {
 	    pass $test
-	    break
+	    # In Ubuntu 10.04.4 environments 'break' does not work here.
+	    set loop 0
 	}
 	-re "Remote connection closed.*\r\n$gdb_prompt $" {
 	    fail "$test (remote connection closed)"
+	    return -1
+	}
+	-re "The program is not being run\\.\r\n$gdb_prompt $" {
+	    fail "$test (valgrind vgdb has terminated)"
 	    return -1
 	}
 	-re "\r\n$gdb_prompt $" {
